objects/Lead.object
<CustomObject>
   <fields>
      <fullName>Budget__c</fullName>
      <label>Budget</label>
      <type>Picklist</type>
      <valueSet>
         <restricted>true</restricted>
         <valueSetDefinition>
            <value>
               <fullName>Less Than ₹1,00,000</fullName>
            </value>
            <value>
               <fullName>In Between ₹1,00,000 to ₹5,00,000</fullName>
            </value>
            <value>
               <fullName>Greater Than ₹5,00,000</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>CurrentGenerators__c</fullName>
      <label>Current Generator(s)</label>
      <length>100</length>
      <type>Text</type>
   </fields>
   <fields>
      <fullName>NumberofLocations__c</fullName>
      <label>Number of Locations</label>
      <precision>3</precision>
      <scale>0</scale>
      <type>Number</type>
   </fields>
   <fields>
      <fullName>Primary__c</fullName>
      <label>Primary</label>
      <type>Picklist</type>
      <valueSet>
         <valueSetDefinition>
            <value>
               <fullName>No</fullName>
            </value>
            <value>
               <fullName>Yes</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>ProductInterest__c</fullName>
      <label>Product Interest</label>
      <type>Picklist</type>
      <valueSet>
         <valueSetDefinition>
            <value>
               <fullName>GC1000 series</fullName>
            </value>
            <value>
               <fullName>GC5000 series</fullName>
            </value>
            <value>
               <fullName>GC3000 series</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>SICCode__c</fullName>
      <label>SIC Code</label>
      <length>15</length>
      <type>Text</type>
   </fields>
   <fields>
      <fullName>External_TXT__c</fullName>
      <externalId>true</externalId>
      <label>External TXT</label>
      <length>15</length>
      <type>Text</type>
   </fields>
   <listViews>
      <fullName>AllOpenLeads</fullName>
      <filterScope>Everything</filterScope>
      <filters>
         <field>LEAD.STATUS</field>
         <operation>notContain</operation>
         <value>closed</value>
      </filters>
      <label>All Open Leads</label>
   </listViews>
   <listViews>
      <fullName>MyUnreadLeads</fullName>
      <filterScope>Mine</filterScope>
      <filters>
         <field>LEAD.UNREAD</field>
         <operation>equals</operation>
         <value>1</value>
      </filters>
      <label>My Unread Leads</label>
   </listViews>
   <listViews>
      <fullName>TodaysLeads</fullName>
      <filterScope>Everything</filterScope>
      <filters>
         <field>LEAD.CREATED_DATE</field>
         <operation>equals</operation>
         <value>TODAY</value>
      </filters>
      <label>Today's Leads</label>
   </listViews>
   <listViews>
      <fullName>ViewCustom1</fullName>
      <columns>FULL_NAME</columns>
      <columns>LEAD.COMPANY</columns>
      <columns>LEAD.STATE</columns>
      <columns>LEAD.EMAIL</columns>
      <columns>LEAD.STATUS</columns>
      <columns>LEAD.CREATED_DATE</columns>
      <columns>CORE.USERS.ALIAS</columns>
      <columns>LEAD.UNREAD</columns>
      <filterScope>Everything</filterScope>
      <label>View - Custom 1</label>
   </listViews>
   <listViews>
      <fullName>ViewCustom2</fullName>
      <columns>FULL_NAME</columns>
      <columns>LEAD.COMPANY</columns>
      <columns>LEAD.STATE</columns>
      <columns>LEAD.EMAIL</columns>
      <columns>LEAD.STATUS</columns>
      <columns>LEAD.CREATED_DATE</columns>
      <columns>CORE.USERS.ALIAS</columns>
      <columns>LEAD.UNREAD</columns>
      <columns>LEAD.LEAD_SOURCE</columns>
      <filterScope>Everything</filterScope>
      <label>View - Custom 2</label>
   </listViews>
   <listViews>
      <fullName>NY_Branch_Lead</fullName>
      <filterScope>Queue</filterScope>
      <label>NY_Branch</label>
      <queue>NY_Branch</queue>
      <sharedTo>
         <allInternalUsers></allInternalUsers>
      </sharedTo>
   </listViews>
   <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>